compiler/tests/should-fail/InsecureDataFlowConfidentiality.via
/* InsecureDataFlowError */

fun main() {
    val secret: int{(A ∧ B)->} = 42;
    val public: int{A->} = secret;
}

host alice : {A}
